--- a/glide.yaml
+++ b/glide.yaml
@@ -11,6 +11,10 @@ import:
   version: ~0.8.0
 - package: github.com/rai-project/config
 - package: github.com/rai-project/logger
+- package: github.com/pixiv/go-libjpeg
+  version: master
+  subpackages:
+  - jpeg
 - package: github.com/sirupsen/logrus
   version: ^1.0.0
 - package: gopkg.in/h2non/bimg.v1
