--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,9 @@ cache:
     - $HOME/libvips
 
 before_install:
+  - go get github.com/klauspost/asmfmt/cmd/asmfmt
+
+before_install:
   - ./travis-install-libjpeg-turbo.sh "$TURBO_VER"
 
 # VIPS 8.3.3 requires Poppler 0.30 which is not released on Trusty.
