--- a/asm/Makefile
+++ b/asm/Makefile
@@ -10,7 +10,7 @@ hwc_to_chw.cpp.s: $(SRCDIR)/hwc_to_chw.cpp
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
 hwc_to_chw.s: hwc_to_chw.cpp.s
-	c2goasm -a -s -c -f $@ $^
+	c2goasm -a -s -c -f $^ $@
 
 clean:
 	rm -fr *.s
