--- a/.travis.yml
+++ b/.travis.yml
@@ -10,21 +10,11 @@ dist: trusty
 sudo: false
 
 env:
-  - LIBVIPS=7.42.3
-  - LIBVIPS=8.2.3
-  - LIBVIPS=8.3.3
-  - LIBVIPS=8.4.5
-  - LIBVIPS=8.5.6
   - LIBVIPS=master
-  - TURBO_VER=""
-  - TURBO_VER="1.5.2" CGO_LDFLAGS="-L/tmp/libjpeg-turbo/lib64" CGO_CPPFLAGS="-I/tmp/libjpeg-turbo/include" LD_LIBRARY_PATH="/tmp/libjpeg-turbo/lib64"
+  - TURBO_VER="1.5.2"
+  - CGO_LDFLAGS="-L/tmp/libjpeg-turbo/lib64" CGO_CPPFLAGS="-I/tmp/libjpeg-turbo/include"
+  - LD_LIBRARY_PATH="/tmp/libjpeg-turbo/lib64"
 
-
-matrix:
-  allow_failures:
-    - env: LIBVIPS=7.42.3
-    - env: LIBVIPS=8.2.3
-    - env: LIBVIPS=8.3.3
 
 addons:
   apt:
