--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,6 +1,6 @@
 
 CXX = clang++
-AMD64CXXFLAGS= -O3 -std=c++11 -S  -mavx -mfma -masm=intel -mno-red-zone -mstackrealign -mllvm -inline-threshold=1000 -fno-asynchronous-unwind-tables -fno-exceptions -fno-rtti -fno-jump-tables
+AMD64CXXFLAGS= -O3 -std=c++11 -S -mavx -mfma -masm=intel -mno-red-zone -mstackrealign -mllvm -inline-threshold=1000 -fno-asynchronous-unwind-tables -fno-exceptions -fno-rtti -fno-jump-tables
 
 SRCDIR=cbits
 TMPDIR=tmp
@@ -12,7 +12,7 @@ hwc_to_chw.cpp.s: $(SRCDIR)/hwc_to_chw.cpp
 	$(CXX) $(AMD64CXXFLAGS) $^ -o tmp/$@
 
 hwc_to_chw_amd64.s: hwc_to_chw.cpp.s
-	c2goasm -a -c -f tmp/$^ $@
+	c2goasm -a -c -s -f tmp/$^ $@
 
 clean:
-	rm -fr *.s
+	rm -fr tmp *.s
