--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/rai-project/image
 import:
 - package: github.com/Unknwon/com
-  version: ~1.0.0
+  version: ^1.0.0
 - package: github.com/bamiaux/rez
 - package: github.com/k0kubun/pp
   version: ~2.3.0
