working on generating asm

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -8,18 +8,24 @@ AMD64CXXFLAGS= -O3 -Dsincosf=__sincosf -Dsincos=__sincos -std=c++1z -S \
 SRCDIR=cbits
 TMPDIR=tmp
 
-all: hwc_to_chw_amd64.s
+all: hwc_to_chw_amd64.s resize_bilinear_amd64.s
 
 hwc_to_chw.cpp: $(SRCDIR)/hwc_to_chw.ispc
 	ispc --target=generic-4 --emit-c++ --c++-include-file=intrinsics/sse4.h --opt=fast-math $^ -o cbits/$@
 
-hwc_to_chw.cpp.s: # hwc_to_chw.cpp
+hwc_to_chw.cpp.s:
 	mkdir -p tmp
 	$(CXX) $(AMD64CXXFLAGS) -I $(SRCDIR) $(SRCDIR)/hwc_to_chw.cpp -o tmp/$@
 
 hwc_to_chw_amd64.s: hwc_to_chw.cpp.s
 	c2goasm -a -c -s -f tmp/$^ $@
 
+resize_bilinear.cpp.s:
+	mkdir -p tmp
+	$(CXX) $(AMD64CXXFLAGS) -I $(SRCDIR) $(SRCDIR)/resize_bilinear.cpp -o tmp/$@
+
+resize_bilinear_amd64.s: resize_bilinear.cpp.s
+	c2goasm -a -c -s -f tmp/$^ $@
 
 clean:
 	rm -fr tmp *.s
