--- a/glide.yaml
+++ b/glide.yaml
@@ -1,26 +1,28 @@
 package: github.com/rai-project/image
 import:
-- package: github.com/Unknwon/com
-  version: ^1.0.0
-- package: github.com/bamiaux/rez
-- package: github.com/k0kubun/pp
-  version: ~2.3.0
-- package: github.com/opentracing/opentracing-go
-  version: ~1.0.2
-- package: github.com/pkg/errors
-  version: ~0.8.0
-- package: github.com/rai-project/config
-- package: github.com/rai-project/logger
-- package: github.com/pixiv/go-libjpeg
-  version: master
+- package: github.com/anthonynsimon/bild
+  version: ^0.10.0
   subpackages:
-  - jpeg
+  - parallel
+- package: github.com/bamiaux/rez
+- package: github.com/opentracing/opentracing-go
+  version: ^1.0.2
+- package: github.com/pkg/errors
+  version: ^0.8.0
+- package: github.com/rai-project/config
+- package: github.com/rai-project/go-libjpeg
+  version: ^0.2
+- package: github.com/rai-project/logger
 - package: github.com/sirupsen/logrus
   version: ^1.0.0
-- package: gopkg.in/h2non/bimg.v1
-  version: ~1.0.10
+- package: golang.org/x/image
+  subpackages:
+  - bmp
+- package: golang.org/x/net
+  subpackages:
+  - context
 - package: github.com/GeertJohan/go-sourcepath
 - package: github.com/stretchr/testify
-  version: ~1.1.4
+  version: ^1.1.4
   subpackages:
   - assert
