--- a/glide.yaml
+++ b/glide.yaml
@@ -22,6 +22,6 @@ import:
   - context
 - package: github.com/GeertJohan/go-sourcepath
 - package: github.com/stretchr/testify
-  version: ^1.1.4
+  version: ~1.1.4
   subpackages:
   - assert
