--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,8 @@ before_install:
   - go get github.com/klauspost/asmfmt/cmd/asmfmt
   - go get github.com/minio/c2goasm
   - go get github.com/minio/asm2plan9s
-
+  - curl -L -s https://github.com/golang/dep/releases/download/v0.4.1/dep-linux-amd64 -o $GOPATH/bin/dep
+  - chmod +x $GOPATH/bin/dep
 
 before_install:
   - ./travis-install-libjpeg-turbo.sh "$TURBO_VER"
@@ -90,7 +91,7 @@ before_install:
   - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/libvips/lib
   - vips --vips-version
 install:
-  - glide install --force
+  - dep ensure
   - rm -fr vendor/github.com/Sirupsen
   - find vendor -type f -exec sed -i 's/Sirupsen/sirupsen/g' {} +
   - go build
