--- a/.travis.yml
+++ b/.travis.yml
@@ -83,13 +83,12 @@ before_install:
   - export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$HOME/libvips/lib/pkgconfig
   - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/libvips/lib
   - vips --vips-version
+before_install:
+  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 install:
-  - cd $TRAVIS_BUILD_DIR
-  - dep ensure -v
-  - rm -fr vendor/github.com/Sirupsen
-  - find vendor -type f -exec sed -i 's/Sirupsen/sirupsen/g' {} +
-  - go build -tags=nolibjpeg
+  - dep ensure
+  - go build
 script:
-  - echo "Skip tests"
+  - echo "Skip tests..."
 after_script:
-  - go test -race -v $(glide novendor)
+  - go test -race -v .
