--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -62,8 +62,8 @@
   name = "github.com/rai-project/logger"
 
 [[constraint]]
+  branch = "master"
   name = "github.com/rai-project/tracer"
-  version = "0.2.0"
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
@@ -86,4 +86,4 @@
   name = "github.com/minio/asm2plan9s"
 
 [prune]
-  go-tests = true 
+  go-tests = true
