--- a/.travis.yml
+++ b/.travis.yml
@@ -1,94 +1,17 @@
 language: go
-matrix:
+jobs:
   include:
-    - go: 1.10.x
-    - go: 1.11.x
+    - go: 1.12.x
     - go: tip
   allow_failures:
     - go: tip
+os: linux
 dist: xenial
-sudo: false
-
-env:
-  global:
-    - LIBVIPS=master
-    - TURBO_VER="1.5.2"
-    - CGO_LDFLAGS="-L/tmp/libjpeg-turbo/lib64" CGO_CPPFLAGS="-I/tmp/libjpeg-turbo/include"
-    - LD_LIBRARY_PATH="/tmp/libjpeg-turbo/lib64"
-
-
-addons:
-  apt:
-    packages:
-    - gobject-introspection
-    - gtk-doc-tools
-    - libcfitsio3-dev
-    - libfftw3-dev
-    - libgif-dev
-    - libgs-dev
-    - libgsf-1-dev
-    - libmatio-dev
-    - libopenslide-dev
-    - liborc-0.4-dev
-    - libpango1.0-dev
-    - libpoppler-glib-dev
-    - libwebp-dev
-
-cache:
-  apt:
-  directories:
-    - $HOME/libvips
-
-before_install:
-  - go get github.com/klauspost/asmfmt/cmd/asmfmt
-  - go get github.com/minio/c2goasm
-  - go get github.com/minio/asm2plan9s
-  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-  - ./scripts/travis-install-libjpeg-turbo.sh "$TURBO_VER"
-  # VIPS 8.3.3 requires Poppler 0.30 which is not released on Trusty.
-  - >
-    test "$LIBVIPS" != "master" -a "$LIBVIPS" \< "8.5" \
-        && wget http://www.vips.ecs.soton.ac.uk/supported/${LIBVIPS%.*}/vips-${LIBVIPS}.tar.gz -O vips.tgz \
-        || echo ":-)"
-  - >
-    test "$LIBVIPS" != "master" -a "$LIBVIPS" \> "8.5" \
-        && wget https://github.com/jcupitt/libvips/releases/download/v${LIBVIPS}/vips-${LIBVIPS}.tar.gz -O vips.tgz \
-        || echo ":-)"
-  - >
-    test $LIBVIPS == "master"\
-        && wget https://github.com/jcupitt/libvips/archive/${LIBVIPS}.tar.gz -O vips.tgz \
-        || echo ":-)"
-  - mkdir libvips
-  - tar xf vips.tgz -C libvips --strip-components 1
-  - cd libvips
-  - test -f autogen.sh && ./autogen.sh || ./bootstrap.sh
-  - >
-    CXXFLAGS=-D_GLIBCXX_USE_CXX11_ABI=0
-    ./configure
-    --disable-debug
-    --disable-dependency-tracking
-    --disable-introspection
-    --disable-static
-    --enable-gtk-doc-html=no
-    --enable-gtk-doc=no
-    --enable-pyvips8=no
-    --without-orc
-    --without-python
-    --prefix=$HOME/libvips
-    $1
-  - make
-  - make install
-  - cd ..
-  - export PATH=$PATH:$HOME/libvips/bin
-  - export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$HOME/libvips/lib/pkgconfig
-  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/libvips/lib
-  - vips --vips-version
 before_install:
   - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 install:
-  - dep ensure
-  - go build -tags=nogpu
-script:
-  - echo "Skip tests..."
+  - dep ensure -v -vendor-only
+  - go build ./...
+script: true
 after_script:
-  - go test -tags=nogpu -race -v .
+  - go test -race -v ./...
