--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 install:
   - dep ensure -v -vendor-only
-  - go build ./...
+  - go build -tags=nogpu ./...
 script: true
 after_script:
-  - go test -race -v ./...
+  - go test -race -v -tags=nogpu ./...
